2012-06-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.99-4 after fixing the gnacopula() bugs.

2012-02-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Description): big merge of 'copula' + 'nacopula'

2012-02-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-0, released to CRAN

2012-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R (nesdepth): nesdepth(<NAC>) gives the nesting depth.

2011-12-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/aux-acopula.R (coeffG): 'method' now contains all dsumSibuya()
	methods; former "dsumSibuya" is deprecated in favor of "dsSib.log".

2011-11-24 Ivan Kojadinovic <ivan.kojadinovic@univ-pau.fr>

	* Added the function exchTest (resp. exchEVTest) that can be used
	to test whether data come from an exchangeable bivariate copula
	(resp. an exchangeable bivariate extreme-value copula).
	* Added the hideWarnings flag in fitCopula. Also, maxit set to
	1000 by default when calling optim.
	* Corrected a few bugs. Many thanks for all the reports.

2011-08-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.7-9, ready for CRAN; released as 0.7-9-1, 2011-09-23

2011-08-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-func.R (log1mexpm): more careful with NAs.

2011-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-func.R (Bernoulli, Bernoulli.all): first "experiments":
	need accuracy even more than speed.

2011-04-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-func.R (polylog): introduce 'is.minus.log' so we can
	get much more accurate Frank density for high correlation.

2010-07-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date): ready for CRAN submission

2010-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nacopula.R (onacopula): allow 'family' be a family object as